--- a/ex2_app/src/Login/Login.css
+++ b/ex2_app/src/Login/Login.css
@@ -1,4 +1,4 @@
-#upperBlock {
+#upperBlockLogin {
     position: relative;
     background-color: #00a884;
     height: 25vh;
@@ -10,7 +10,6 @@
     position: relative;
     width: 100%;
     height: 75vh;
-    /* top: 30%; */
     z-index: -1;
     display: flex;
     background-color: #111b21
