--- a/ex2_app/src/Main_screen/Left_screen/New_contact_modal/New_contact_modal.css
+++ b/ex2_app/src/Main_screen/Left_screen/New_contact_modal/New_contact_modal.css
@@ -1,8 +1,63 @@
 .modal-content {
     margin-top: 20%;
+    color: rgb(223, 223, 223);
+
 }
 
 .modal input {
     width: 100%;
     height: 40px;
+    border-radius: 5pt;
+    padding-left: 2.3%;
 }
+
+.modal-header {
+    background-color: #3d3f40;
+    border-bottom-color: #b0b0b049;
+
+}
+
+.modal-body {
+    font-family:Georgia, 'Times New Roman', Times, serif ;
+    background-color: rgb(49, 49, 49);
+}
+
+.modal-footer {
+    background-color: rgb(49, 49, 49);
+    border-top-color: #b0b0b049;
+}
+
+#add {
+    background-color: #ffc107f2;
+    border-color: #ffc107f2;
+
+}
+
+#add:hover {
+    background-color: #ffc107d3;
+    border-color: #ffc107d3;
+}
+
+#add:active {
+    background-color: #f0b70cd3;
+    border-color: #f0b70cd3;
+}
+
+#cancel {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    color: #000;
+
+}
+
+#cancel:hover {
+    background-color: #ca3241;
+    border-color: #ca3241;
+}
+
+#cancel:active {
+    background-color: #b32d3a;
+    border-color: #b32d3a;
+}
+
+
