--- a/ex2_app/src/Register/Register.css
+++ b/ex2_app/src/Register/Register.css
@@ -85,6 +85,8 @@ input{
     right: 0px;
     margin: auto;
     border-radius: 0%;
+    border-radius: 5pt;
+
 }
 
 #login:active {
@@ -93,9 +95,41 @@ input{
 
 #logo-Register {
     position: absolute;
-    right: 20vh;
+    right: 10vh;
     top: 0px;
-    bottom: 0px;
+    bottom: 30%;
     margin: auto;
     border-radius: 0%;
+}
+
+#rules {
+    color: rgba(255, 0, 0, 0.733);
+    font-size: small;
+    tab-size: 8;
+    line-height: 1.3;
+}
+
+#verifyDiv {
+    color: rgba(255, 0, 0, 0.733);
+    font-size: small;
+    tab-size: 8;
+    line-height: 1.3;
+}
+
+#emptyDiv {
+    color: rgba(255, 0, 0, 0.733);
+    font-size: small;
+    tab-size: 8;
+    line-height: 1.3;
+}
+
+#nameDiv {
+    color: rgba(255, 0, 0, 0.733);
+    font-size: small;
+    tab-size: 8;
+    line-height: 1.3;
+}
+
+br{
+    line-height: 1.3;
 }
