btn OF color. I said Bit**...

--- a/ex2_app/src/Main_screen/Right_screen/Chat_area/Chat_area.css
+++ b/ex2_app/src/Main_screen/Right_screen/Chat_area/Chat_area.css
@@ -15,3 +15,17 @@
   overflow: auto;
 
 }
+
+
+
+
+/* light_mode */
+
+#chat_area.light_mode {
+
+  background-color: rgb(164, 248, 160);
+  border-top-color: #b0b0b049;
+
+  overflow: auto;
+
+}
