--- a/ex2_app/src/Main_screen/Right_screen/Corrent_chat_name_area/Corrent_chat_name_area.css
+++ b/ex2_app/src/Main_screen/Right_screen/Corrent_chat_name_area/Corrent_chat_name_area.css
@@ -38,3 +38,13 @@
     margin: auto;
 }
 
+/* light_mode */
+
+
+#corrent_chat_name_area.light_mode {
+
+    background-color: rgb(181, 25, 25);
+
+
+}
+
