--- a/ex2_app/src/Main_screen/Right_screen/Chat_area/Message/Message.css
+++ b/ex2_app/src/Main_screen/Right_screen/Chat_area/Message/Message.css
@@ -1,25 +1,4 @@
-.bubble{
-    width: min-content;
-    padding-left: 10px;
-    padding-right: 10px;
 
-    text-align: left;
-
-}
-
-.bubble_first{
-    margin-top: auto;
-}
-
-.bubble_left{
-    background-color: aqua;
-
-}
-
-.bubble_right{
-    float: right;
-    background-color: firebrick;
-}
 
 .bubble_time {
     color: #dededead;
@@ -27,16 +6,6 @@
 }
 
 
-/* 
-  
-  .chat {
-    width: 300px;
-    border: solid 1px #EEE;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-  }
-   */
 
   .message_row {
     display: flex;
@@ -67,7 +36,7 @@
     padding-right: 2%;
 
   }
-
+  
   .mine .bubble_time {
     position: relative;
     font-size: x-small;
@@ -93,6 +62,8 @@
     padding-left: 2%;
   }
 
+
+
 .yours .bubble_time {
     position: relative;
     width: fit-content;
@@ -106,8 +77,26 @@
     position:relative;
     height: fit-content;
     max-width: 400px;
-    /* width: calc(); */
-    /* white-space:nowrap; */
-    /* max-width: 30vh; */
+
 }
 
+
+
+
+
+/* light_mode */
+
+.light_mode .bubble_time {
+  color: #170e0ead;
+
+}
+
+.mine.light_mode .message {
+  color: rgb(63, 1, 1) !important;
+  background-color: #a99bf8 !important;
+}
+
+.yours.light_mode .message {
+  color: rgb(2, 6, 2) !important;
+  background: #ffffff !important;
+}
