errors notification modal

--- a/ex2_app/src/Main_screen/Left_screen/New_contact_modal/New_contact_modal.css
+++ b/ex2_app/src/Main_screen/Left_screen/New_contact_modal/New_contact_modal.css
@@ -60,4 +60,11 @@
     border-color: #b32d3a;
 }
 
+#errorsModals {
+    color: rgba(255, 78, 78, 0.735);
+    position: relative;
+    tab-size: 8;
+    line-height: 1.3;
+}
+
 
