Fixed light mode and color button

--- a/ex2_app/src/Main_screen/Left_screen/Left_screen.css
+++ b/ex2_app/src/Main_screen/Left_screen/Left_screen.css
@@ -29,8 +29,12 @@ img {
 /* light_mode */
 
 #left_screen.light_mode {
-   
-    background-color: rgb(128, 58, 58);
-   
+
+    border-right-width: 1px;
+
+    background-color: #058175;
+    border-right-color: #0a675e;
+    border-top-color: #058175;
+    border-bottom-color: #058175;
 }
 
