--- a/ex2_app/src/Main_screen/Right_screen/Chat_area/Chat_area.css
+++ b/ex2_app/src/Main_screen/Right_screen/Chat_area/Chat_area.css
@@ -16,15 +16,13 @@
 
 }
 
-
-
-
 /* light_mode */
 
 #chat_area.light_mode {
 
-  background-color: rgb(164, 248, 160);
-  border-top-color: #b0b0b049;
+  background-color: rgb(255, 255, 255);
+  border-top-color: #ffffff;
+  border-color: #ffffff;
 
   overflow: auto;
 
