--- a/ex2_app/src/Main_screen/Right_screen/Input_area/Input_area.css
+++ b/ex2_app/src/Main_screen/Right_screen/Input_area/Input_area.css
@@ -6,6 +6,10 @@
     width: 100%;
 }
 
+#input_area.light_mode {
+    background-color: rgb(255, 255, 255);
+}
+
 #input_area>input {
     position: relative;
     height: 76%;
