--- a/ex2_app/src/Main_screen/Right_screen/Chat_area/Message/Message.css
+++ b/ex2_app/src/Main_screen/Right_screen/Chat_area/Message/Message.css
@@ -92,11 +92,11 @@
 }
 
 .mine.light_mode .message {
-  color: rgb(63, 1, 1) !important;
-  background-color: #a99bf8 !important;
+  color: rgb(0, 0, 0) !important;
+  background-color: #12e799 !important;
 }
 
 .yours.light_mode .message {
-  color: rgb(2, 6, 2) !important;
-  background: #ffffff !important;
+  color: rgb(0, 0, 0) !important;
+  background: #988aff !important;
 }
