--- a/ex2_app/src/Main_screen/Left_screen/Left_screen.css
+++ b/ex2_app/src/Main_screen/Left_screen/Left_screen.css
@@ -32,9 +32,9 @@ img {
 
     border-right-width: 1px;
 
-    background-color: #058175;
-    border-right-color: #0a675e;
-    border-top-color: #058175;
-    border-bottom-color: #058175;
+    background-color: #00a884;
+    border-right-color: #00a884;
+    border-top-color: #00a884;
+    border-bottom-color: #00a884;
 }
 
