--- a/ex2_app/src/Main_screen/Left_screen/My_chats_area/Chat_tile/Chat_tile.css
+++ b/ex2_app/src/Main_screen/Left_screen/My_chats_area/Chat_tile/Chat_tile.css
@@ -29,7 +29,7 @@
     position: relative;
     width: 40px;
     height: 40px;
-    margin-left: 5px;
+    /* margin-left: 5px; */
     bottom: 0px;
     top: 0px;
 }
@@ -56,11 +56,43 @@
     width: min-content;
     font-size: x-small;
     color: #dededead;
-
     position: relative;
     /* float: right; */
     right: 0px;
     margin-right: 10px;
     padding: auto;
 
+}
+
+.circle{
+    width:30px;
+    height:30px;
+    border-radius:50px;
+    font-size:14px;
+
+    margin-right: 7px;
+    color:rgb(223, 223, 223);
+    line-height:30px;
+    text-align:center;
+    background:#008c6e;
+}
+
+.friend_name_and_last {
+    position: absolute;
+    width: 80%;
+}
+
+.last_msg {
+    position: absolute;
+    max-width: 83%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+}
+
+#others_profile {
+    left: 2.5%;
+    width: 50px;
+    height: 50px;
 }
