--- a/ex2_app/src/Main_screen/Right_screen/Chat_area/Message/Message.css
+++ b/ex2_app/src/Main_screen/Right_screen/Chat_area/Message/Message.css
@@ -17,7 +17,7 @@
     margin-top: 0.4%;
     width: fit-content;
     display: inline-block;
-    word-break: break-all;
+    word-break: break-word;
     /* flex-direction: column; */
 
 
